--- a/src/Module/MainPage/style/index.css
+++ b/src/Module/MainPage/style/index.css
@@ -348,7 +348,7 @@
 }
 .main-page-technology-area {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 .main-page-technology-area > div {
