--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   /* overflow-x: hidden; */
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 .container {
